# 2d-engine

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
include/: AssetsManager.hpp  Entity.hpp  Game.hpp  Properties.hpp  Renderable.hpp  SpriteSheet.hpp  Timer.hpp  World.hpp  WorldLayer.hpp  debug_utilities.hpp  tb_engine.hpp  utilities.hpp
src/: AssetsManager.cpp  Game.cpp  Point2D.cpp  Properties.cpp  SpriteSheet.cpp  Timer.cpp  World.cpp  debug_utilities.cpp  utilities.cpp
